split screen and text area

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The markdown editor</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    
+    <header>
+        <h1>The markdown editor</h1>
+    </header>
+    <main>
+        <section id="markdown">
+            <label for="text-markdown"></label>
+            <textarea id="text-markdown" name ="text-markdown"></textarea>
+        </section>
+        <section id="preview"></section>
+    </main>
 </body>
 </html>
