functional addeventlistener keydown

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <label for="text-markdown"></label>
             <textarea id="text-markdown" name ="text-markdown"></textarea>
         </section>
-        <section id="preview"></section>
+        <section id="preview">
+            <div id="preview-area"></div>
+        </section>
     </main>
+
+    <script src="./script.js"></script>
 </body>
 </html>
